# jimpass

./: .travis.yml  README.md  pybiro.py  requirements.txt  setup.cfg  setup.py
commands/: rofi.py
jimpass/: cli.py  config.py  controller.py  parser.py  util.py
jimpass/managers/: base.py  bitwarden.py  lastpass.py
pybiro/: cli.py  config.py  controller.py  key_manager.py  parser.py  util.py
pybiro/backends/: base.py  bitwarden.py
pybiro/commands/: rofi.py
pybiro/frontends/: base.py  rofi.py
pybiro/managers/: base.py  bitwarden.py  lastpass.py
tests/: test_bitwarden.py  test_key_manager.py  test_parser.py  test_utils.py
