[metadata]
name = Jimpass
author = Remy Rojas
author-email = remy.rojas@pm.me
summary = A universal password manager interface, powered by Rofi
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/remyrd/jimpass
classifier =
  Operating System :: Unix
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[entry_points]
console_scripts=
  jp = jimpass.cli:cli
  jimpass = jimpass.cli:cli

[files]
packages =
  jimpass

[wheel]
universal = 1

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
